--- a/.github/workflows/优化工作流.yml
+++ b/.github/workflows/优化工作流.yml
@@ -1,4 +1,4 @@
-name: OpenWrt极简编译（云端智能空间管理）
+name: OpenWrt优化编译（云端智能空间管理）
 
 on:
   workflow_dispatch:
@@ -39,17 +39,17 @@ jobs:
     - name: 检查仓库文件
       run: |
         echo "=== 检查仓库文件 ==="
-        echo "当前目录: $(pwd)"
-        echo "所有文件（包括隐藏文件）:"
+        echo "当前工作目录: $(pwd)"
+        echo "工作目录内容:"
         ls -la
         
         echo ""
         echo "=== 配置文件验证 ==="
         if [ -f ".config" ]; then
           echo "✅ 找到 .config 文件"
+          echo "  路径: $(pwd)/.config"
           echo "  大小: $(ls -lh .config | awk '{print $5}')"
-          echo "  预览前5行:"
-          head -5 .config
+          echo "  行数: $(wc -l < .config)"
         else
           echo "❌ 错误：未找到 .config 文件"
           exit 1
@@ -58,9 +58,11 @@ jobs:
         echo ""
         if [ -f "feed.conf.default" ]; then
           echo "✅ 找到 feed.conf.default 文件"
+          echo "  路径: $(pwd)/feed.conf.default"
           echo "  大小: $(ls -lh feed.conf.default | awk '{print $5}')"
-          echo "  预览前5行:"
-          head -5 feed.conf.default
+          echo "  行数: $(wc -l < feed.conf.default)"
+          echo "  内容预览:"
+          head -10 feed.conf.default
         else
           echo "⚠️ 警告：未找到 feed.conf.default 文件，将使用源码默认配置"
         fi
@@ -84,9 +86,6 @@ jobs:
         
         # 极致清理系统空间
         echo "执行极致空间清理..."
-        
-        # 安全清理旧内核
-        sudo apt-get remove --purge -y $(dpkg -l 'linux-*' | awk '/^ii/{print $2}' | grep -E '[0-9]+\.[0-9]+\.[0-9]+' | grep -v $(uname -r | cut -d- -f-2) | grep -v $(uname -r | sed 's/-generic//')) 2>/dev/null || true
         
         # 清理所有缓存
         sudo apt-get autoremove --purge -y
@@ -145,7 +144,7 @@ jobs:
         
         echo "编译环境安装完成"
 
-    - name: 克隆源码并完全应用配置
+    - name: 克隆源码
       run: |
         # 删除旧目录（如果存在）
         rm -rf "$BUILD_DIR"
@@ -158,54 +157,85 @@ jobs:
           exit 1
         fi
         
-        cd "$BUILD_DIR"
-        
         echo "✅ 源码克隆完成"
-        echo "原始大小: $(du -sh . | cut -f1)"
+        echo "源码目录: $(pwd)/$BUILD_DIR"
+        echo "源码大小: $(du -sh $BUILD_DIR | cut -f1)"
+
+    - name: 应用配置文件（关键步骤）
+      run: |
+        echo "=== 应用配置文件 ==="
+        echo "当前目录: $(pwd)"
+        echo "BUILD_DIR: $BUILD_DIR"
         
-        # 关键步骤：应用您的自定义配置
-        echo "=== 应用您的配置文件 ==="
+        # 验证源文件存在
+        echo ""
+        echo "验证源文件:"
+        ls -la .config feed.conf.default 2>/dev/null || echo "某些文件不存在"
         
-        # 1. 应用 .config 文件
-        echo "1. 复制 .config 文件..."
-        cp "../.config" .config
-        echo "  验证: $(ls -lh .config)"
+        # 进入编译目录
+        cd "$BUILD_DIR"
+        echo "现在在编译目录: $(pwd)"
         
-        # 2. 应用 feed.conf.default 文件（如果存在）
-        if [ -f "../feed.conf.default" ]; then
-          echo "2. 复制 feed.conf.default 文件..."
-          cp "../feed.conf.default" .
-          echo "  验证: $(ls -lh feed.conf.default)"
-          
-          # 显示feed配置差异
-          echo "  您的feed配置内容:"
-          echo "  -------------------------"
-          cat feed.conf.default
-          echo "  -------------------------"
+        # 显示编译目录内容
+        echo "编译目录内容:"
+        ls -la
+        
+        echo ""
+        echo "=== 复制配置文件 ==="
+        
+        # 复制 .config 文件
+        if [ -f "../.config" ]; then
+          echo "复制 .config 文件..."
+          cp "../.config" .
+          echo "✅ .config 已复制"
+          echo "验证: $(ls -lh .config)"
         else
-          echo "2. 未找到您的feed.conf.default，使用源码默认配置"
-          echo "  默认feed配置:"
-          echo "  -------------------------"
-          head -10 feed.conf.default 2>/dev/null || echo "无法读取默认feed配置"
-          echo "  -------------------------"
+          echo "❌ 错误：找不到 ../.config 文件"
+          exit 1
         fi
         
-        # 3. 验证配置文件完整性
+        # 复制 feed.conf.default 文件（如果存在）
         echo ""
-        echo "=== 配置文件完整性验证 ==="
-        echo ".config 文件行数: $(wc -l < .config)"
-        echo "feed.conf.default 文件行数: $(wc -l < feed.conf.default 2>/dev/null || echo 0)"
+        if [ -f "../feed.conf.default" ]; then
+          echo "复制 feed.conf.default 文件..."
+          cp "../feed.conf.default" .
+          echo "✅ feed.conf.default 已复制"
+          echo "验证: $(ls -lh feed.conf.default)"
+          
+          # 显示feed配置
+          echo ""
+          echo "=== 您的feed配置 ==="
+          cat feed.conf.default
+          echo "=== 结束feed配置 ==="
+        else
+          echo "⚠️ 警告：未找到 ../feed.conf.default 文件，使用源码默认配置"
+          echo "默认feed配置:"
+          head -10 feed.conf.default 2>/dev/null || echo "无法读取默认feed配置"
+        fi
         
-        # 4. 极简清理源码
+        # 验证文件已成功复制
         echo ""
-        echo "执行极简源码清理..."
-        rm -rf .git
+        echo "=== 文件复制验证 ==="
+        if [ -f ".config" ]; then
+          echo "✅ .config 文件存在"
+        else
+          echo "❌ .config 文件不存在"
+          exit 1
+        fi
         
-        echo "清理后大小: $(du -sh . | cut -f1)"
+        if [ -f "feed.conf.default" ]; then
+          echo "✅ feed.conf.default 文件存在"
+        else
+          echo "⚠️ feed.conf.default 文件不存在"
+        fi
 
     - name: 智能下载管理器
       run: |
         cd "$BUILD_DIR"
+        
+        echo "当前目录: $(pwd)"
+        echo "目录内容:"
+        ls -la
         
         # 创建下载目录符号链接到缓存
         rm -rf dl
@@ -252,14 +282,31 @@ jobs:
       run: |
         cd "$BUILD_DIR"
         
-        # 关键：使用您的feed配置更新feeds
-        echo "=== 使用您的feed配置更新feeds ==="
-        echo "当前feed配置:"
-        echo "--------------------------------"
-        cat feed.conf.default
-        echo "--------------------------------"
+        echo "当前目录: $(pwd)"
+        echo "目录内容:"
+        ls -la
         
-        echo "更新Feeds..."
+        # 验证配置文件存在
+        echo ""
+        echo "=== 验证配置文件 ==="
+        if [ ! -f ".config" ]; then
+          echo "❌ 错误：.config 文件不存在"
+          exit 1
+        fi
+        
+        if [ ! -f "feed.conf.default" ]; then
+          echo "⚠️ 警告：feed.conf.default 文件不存在，使用默认配置"
+        else
+          echo "✅ feed.conf.default 文件存在"
+          echo "feed配置内容:"
+          echo "--------------------------------"
+          cat feed.conf.default
+          echo "--------------------------------"
+        fi
+        
+        # 关键：使用您的feed配置更新feeds
+        echo ""
+        echo "=== 使用您的feed配置更新feeds ==="
         ./scripts/feeds update -a
         
         echo "安装选定的软件包..."
